@@ -66,10 +66,16 @@ def is_info_enabled(logger):
 
 class echo_property(object):
     level_map={logging.DEBUG : "debug", logging.INFO:True}
+    
+    __doc__ = "when ``True``, enable echoing for this element."
+    
     def __get__(self, instance, owner):
         level = logging.getLogger(_get_instance_name(instance)).getEffectiveLevel()
         return echo_property.level_map.get(level, False)
+        
     def __set__(self, instance, value):
+        if instance is None:
+            return self
         if value:
             default_logging(_get_instance_name(instance))
             logging.getLogger(_get_instance_name(instance)).setLevel(value == 'debug' and logging.DEBUG or logging.INFO)
